[package]
name = "muninn-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Strict boundary adapter between muninn-kernel and muninn-frames"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ianzepp/muninn-bridge-rs"
homepage = "https://github.com/ianzepp/muninn-bridge-rs"
documentation = "https://github.com/ianzepp/muninn-bridge-rs"
keywords = ["bridge", "frames", "kernel", "protobuf", "realtime"]
categories = ["network-programming", "asynchronous"]

[dependencies]
muninn-frames = { path = "../muninn-frames" }
muninn-kernel = { path = "../muninn-kernel" }
serde_json = "1"
thiserror = "2"
uuid = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
collapsible_else_if = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
unnecessary_map_or = "allow"
unnecessary_result_map_or_else = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
